--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <form action="/enc/" method="post" enctype="application/x-www-form-urlencoded">
+    <form action="/add" method="post" enctype="application/x-www-form-urlencoded">
         <input type="text" name="url" placeholder="Past your URL" />
         <input type="submit" value="Submit" />
     </form>
