--- a/www/test.html
+++ b/www/test.html
@@ -7,7 +7,8 @@
 
 <body>
 
-    <script src="./test.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="/handler.js"></script>
     <div id="url-add-form">
         <form name="url-add-form" action="">
             <input id="long-url" type="text" name="long-url" placeholder="Past your URL" />
