--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,10 @@
         </form>
     </div>
 
+    <form action="/api/add/" method="post" enctype="application/x-www-form-urlencoded">
+        <input type="text" name="url" placeholder="Past your URL" />
+        <input type="submit" value="Submit" />
+    </form>
 
 </body>
 
